--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           az extension add --name spring-cloud
           az configure --defaults group=CLUSTER_RG
           az configure --defaults spring-cloud=CLUSTER_NAME
-          az spring-cloud config-server git set --uri CONFIGSERVER_URL --label config
+          az spring-cloud config-server git set -n CLUSTER_NAME --uri CONFIGSERVER_URL --label config
           az spring-cloud app create --name gateway --is-public true
           az spring-cloud app create --name auth-service
           az spring-cloud app create --name account-service
