--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,7 @@ on: [push]
 
 name: AzureSpringCloud
 
-# env not working for Azure CLI
-env:
-  CLUSTER_NAME: yuchensp
-  CLUSTER_RG: ycuhensp
-  CONFIGSERVER_URL: https://github.com/yucwan/piggymetrics
-
 jobs:
-
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
@@ -17,13 +10,13 @@ jobs:
     # checkout the repo
     - uses: actions/checkout@master
     
-    # Maven Build and package
+    # Set up Java environment
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     
-    # build and clean
+    # Maven build and clean
     - name: maven build, clean
       run: |
         mvn clean package -D skipTests
@@ -33,9 +26,16 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
-    # Maven deploy
-    - name: maven build, clean
-      run: |
-        mvn azure-spring-cloud:deploy
-    
-
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.75
+        inlineScript: |
+          az extension add --name spring-cloud
+          az configure --defaults group=yuchensp
+          az configure --defaults spring-cloud=yuchensp
+          az spring-cloud config-server git set -n yuchensp --uri https://github.com/yucwan/piggymetrics --label config
+          az spring-cloud app deploy -n gateway --jar-path $GITHUB_WORKSPACE/gateway/target/gateway.jar
+          az spring-cloud app deploy -n account-service --jar-path $GITHUB_WORKSPACE/account-service/target/account-service.jar
+          az spring-cloud app deploy -n auth-service --jar-path $GITHUB_WORKSPACE/auth-service/target/auth-service.jar
+          az spring-cloud app update -n gateway --is-public true
