--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
+    - name: Install ASC az extension
+      run: az extension add --name spring-cloud
+   
     - name: AZ CLI commands
       run: az spring-cloud app update -n gateway --is-public false
     
