--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       run: az extension add --name spring-cloud
    
     - name: AZ CLI commands
-      run: az spring-cloud app update -n gateway --is-public false
+      run: az spring-cloud app update -n gateway --is-public false -g yuchensp -s yuchensp
     
