--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     - name: AZ CLI commands
       run: |
         az configure --defaults group=$GROUP
-        az configure --defaults spring-cloud=SERVICE_NAME
+        az configure --defaults spring-cloud=$SERVICE_NAME
         az spring-cloud app deploy -n gateway --jar-path ${{ github.workspace }}/gateway/target/gateway.jar
     # az spring-cloud app deploy -n account-service --jar-path ${{ github.workspace }}/account-service/target/account-service.jar
     # az spring-cloud app deploy -n auth-service --jar-path ${{ github.workspace }}/auth-service/target/auth-service.jar
