--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,36 +11,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    # checkout the repo
     - uses: actions/checkout@master
     
-    # Set up Java environment
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     
-    # Maven build and clean
     - name: maven build, clean
       run: |
         mvn clean package -D skipTests
     
-    # Auth with AAD
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
       
-    - name: Install ASC az extension
+    - name: Install ASC AZ extension
       run: az extension add --name spring-cloud
    
-    - name: AZ CLI commands
+    - name: Deploy with AZ CLI commands
       run: |
-        az -v
         az configure --defaults group=$GROUP
         az configure --defaults spring-cloud=$SERVICE_NAME
-    #    az spring-cloud app deploy -n gateway --jar-path ${{ github.workspace }}/gateway/target/gateway.jar
-    # az spring-cloud app deploy -n account-service --jar-path ${{ github.workspace }}/account-service/target/account-service.jar
-    # az spring-cloud app deploy -n auth-service --jar-path ${{ github.workspace }}/auth-service/target/auth-service.jar
-    # az spring-cloud app update -n gateway --is-public true
+        az spring-cloud app deploy -n gateway --jar-path ${{ github.workspace }}/gateway/target/gateway.jar
+        az spring-cloud app deploy -n account-service --jar-path ${{ github.workspace }}/account-service/target/account-service.jar
+        az spring-cloud app deploy -n auth-service --jar-path ${{ github.workspace }}/auth-service/target/auth-service.jar
     
